--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <a class="nav-link scrollto" href="#edu">Education</a>
                     </li>
                     <li>
+                        <a class="nav-link scrollto" href="#pr">Projects</a>
+                    </li>
+                    <li>
                         <a class="nav-link scrollto" href="#skills">Skills</a>
                     </li>
                     <li><a class="nav-link scrollto " href="#Certi">certification</a></li>
@@ -86,8 +89,10 @@
     </div>
 
     <!-- End Hero Section -->
+    <section id="about">
 
 
+    </section>
     <section id="about" class="about-mf sect-pt4 route">
         <div class="container">
             <div class="row">
@@ -97,7 +102,7 @@
                             <div class="about-me pt-4 pt-md-0">
                                 <div class="title-box-2">
                                     <h2>
-                                        <B> About me</B>
+                                        <B> About me </B>
                                     </h2>
                                 </div>
                             </div>
@@ -107,14 +112,15 @@
                                         <img src="fgdggbfd.jpg" alt="profile_image">
 
                                     </div>
+                                    <strong>
+                                        Inventive Mechanical Engineering Undergraduate student in Alva's Institute of Engineering and Technology with a passion for Design. Skilled with Designing, Simulation, Creating Detailed Model and drawing. Intrested in Production sector,Marketing and Event
+                                        Management. .Dedicated and passionate aiming towards using my Designing knowledge to satisfy the needs of a reputed company and to upgrade my further knowledge and experience as an Intern.
+                                    </strong>
                                 </div>
 
                             </div>
                             <div>
-                                <p>
-                                    Inventive Mechanical Engineering Undergraduate student in Alva's Institute of Engineering and Technology with a passion for Design. Skilled with Designing, Simulation, Creating Detailed Model and drawing. Intrested in Production sector,Marketing and Event
-                                    Management. .Dedicated and passionate aiming towards using my Designing knowledge to satisfy the needs of a reputed company and to upgrade my further knowledge and experience as an Intern.
-                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -135,7 +141,7 @@
                 <div class="box-shadow-full">
                     <div class="row">
                         <h2>
-                            <B>Education</B>
+                            <B>Education </B>
                         </h2>
                     </div>
                     <div class="row">
@@ -148,22 +154,25 @@
                                 <div class="resume-item">
                                     <h4>Bachelor of Mechanical Engineering </h4>
                                     <h5>2020 - Present</h5>
-                                    <p><em>Alva's Institute of Engineering and Technolgy</em></p>
+                                    <strong>
+                                    <p><em>Alva's Institute of Engineering and Technolgy</em></p></strong>
                                     <p>Affiliated Visvesvaraya Technological University,Karnataka</p>
-                                    <p>Cumulative CGPA:8.1</p>
+                                    <p>Cumulative CGPA: 8.2</p>
                                 </div>
                                 <div class="resume-item">
                                     <h4>Class XII</h4>
                                     <h5>2018 - 2020</h5>
+                                    <strong>
                                     <p><em>SDM PU College</em></p>
+                                    </strong>
                                     <p>Ujire,Karnataka</p>
                                     <p>Percentage: 74%</p>
                                 </div>
                                 <div class="resume-item">
                                     <h4>Class X</h4>
                                     <h5>2008- 2018</h5>
-                                    <P>
-                                        <em>Viveka English Medium High School</em></P>
+                                    <strong> <P>
+                                        <em>Viveka English Medium High School</em></P></strong>
                                     <p>Balupete,Karnataka</p>
                                     <p>Percentage: 81%</p>
                                 </div>
@@ -173,6 +182,150 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section id="pr">
+        <div class="container">
+            <div class="col-sm-12">
+                <div class="box-shadow-full">
+                    <div class="row">
+                        <h2>
+                            <B>Projects </B>
+                        </h2>
+                        <ul>
+                            <strong style="font-style: oblique; font-size: larger">1.Folding Bed :</strong>
+                            <br>
+
+                            <li>
+                                4 Members in a Team ,My Role as a
+                                <strong>Captain and Designer in the Team.</strong>
+                            </li>
+                            <li>
+                                The design and fabrication of multispecialty hospital use folding beds play a vital role in providing comfort, safety, and functionality to patients and healthcare providers. This abstract presents an overview of the key aspects involved in the design
+                                and fabrication process of these beds, highlighting their importance in the healthcare industry.The primary objective of this study is to develop folding beds that meet the specific requirements of a multispecialty hospital
+                                setting. The research focuses on incorporating features that enhance ergonomics, adjustability, and support mechanisms to ensure optimal patient comfort and safety. The beds are designed to provide ease of use for both
+                                patients and healthcare providers, considering accessibility and mobility within the hospital environment. The selection of suitable materials is crucial to ensure durability and weightbearing capacity of the folding beds.
+                                This study explores different materials and their properties to identify the most suitable options that can withstand the demands of hospital use while maintaining structural integrity and longevity.
+                            </li>
+                        </ul>
+                        <div class="work-list">
+                            <div class="work">
+                                <img src="assets/img/pr1design.png">
+                                <div class="layer">
+                                    <h3>Design</h3>
+                                </div>
+                            </div>
+                            <div class="work">
+                                <img src="assets/img/fb1.jpg">
+                                <div class="layer">
+                                    <h3>Model</h3>
+                                </div>
+                            </div>
+                            <div class="work">
+                                <video width="320" height="280" controls>
+                                    <source src="assets/img/fb5.mp4" type="video/mp4">
+                                    <source src="movie.ogg" type="video/ogg">
+                                   Video Explanation
+                                  </video>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <br>
+                    <br>
+                    <br>
+
+                    <ul>
+                        <strong style="font-style: oblique; font-size: larger"> 2.Disk Belt Polisher:</strong>
+                        <br>
+
+                        <li>
+                            4 Members in a Team ,My Role as a
+                            <strong>Designer in the Team.</strong> </li>
+                        <li>
+                            The belt polisher is engineered in such a way that in a very small cost all the requirements of a belt grinder is achieved and also the required safety precaution for the operators, A Tachometer which will give the reading of the speed of the motor.
+                        </li>
+                    </ul>
+                    <div class="work-list">
+                        <div class="work">
+                            <img src="assets/img/pr2design.png">
+                            <div class="layer">
+                                <h3>Design</h3>
+                            </div>
+                        </div>
+
+                        <div class="work">
+                            <img src="assets/img/prf4.jpg">
+                            <div class="layer">
+                                <h3>MOdel</h3>
+                            </div>
+                        </div>
+                        <div class="work">
+
+
+                            <video width="320" height="280" controls>
+                                <source src="assets/img/pr222.mp4" type="video/mp4">
+                                <source src="movie.ogg" type="video/ogg">
+                               
+                              </video>
+                        </div>
+                    </div>
+                    <ul>
+                        <strong style="font-style: oblique; font-size: larger"> 2.Electric Vehicle:</strong>
+                        <br>
+
+                        <li>
+                            The Workshop Conducted by our College Where we were Created the Electric Vehicle in just 14 Days.
+                        </li>
+                    </ul>
+                    <div class="work-list">
+                        <div class="work">
+                            <img src="assets/img/electricdesign.jpg">
+                            <div class="layer">
+                                <h3>Design</h3>
+                            </div>
+                        </div>
+
+                        <div class="work">
+                            <img src="assets/img/ele1.jpg">
+                            <div class="layer">
+                                <h3>MOdel</h3>
+                            </div>
+                        </div>
+                        <div class="work">
+                            <img src="assets/img/electric.jpg">
+                            <div class="layer">
+                                <h3>Team</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+        </div>
+
+        </div>
+        </div>
+
+        </div>
+
+        </div>
+        </div>
+
+        </div>
+
+
+
+
+        </div>
+        </div>
+        </div>
         </div>
     </section>
 
@@ -187,7 +340,7 @@
                             <div class="about-me pt-4 pt-md-0">
                                 <div class="title-box-2">
                                     <h2>
-                                        <B> Skills</B>
+                                        <B> Skills :</B>
                                     </h2>
 
 
@@ -210,7 +363,7 @@
                                         </div>
                                     </div>
                                     <h3>
-                                        <B>Achivements</B>
+                                        <B>Achivements :</B>
                                     </h3>
                                     <div class="row">
                                         <div class="col-lg-0">
@@ -370,6 +523,7 @@
             </div>
         </div>
     </section>
+
     <!-- End certification Section -->
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route">
@@ -385,7 +539,7 @@
                                     <div class="col-md-6">
                                         <div class="title-box-2 pt-4 pt-md-0">
                                             <h2>
-                                                <B> Contact</B>
+                                                <B> Contact :</B>
                                             </h2>
                                         </div>
                                         <ul class="list-ico">
@@ -434,6 +588,12 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
 
 </body>
 
