--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <a class="nav-link scrollto" href="#skills">Skills</a>
                     </li>
                     <li><a class="nav-link scrollto " href="#Certi">certification</a></li>
-                    <li>
-                        <a class="nav-link scrollto " href="https://drive.google.com/file/d/1iasXxZ5LEmQJFRHvXOOuru0GUoO7_Hq3/view?usp=share_link">Resume</a>
+                     <li>
+                        <a class="nav-link scrollto " href="https://drive.google.com/file/d/1fkHqmdQCnHvmKyyMpZUSarLzG-WgC05z/view?usp=sharing">Resume</a>
                     </li>
 
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -389,7 +389,7 @@
             </div>
     </section>
     <!-- skills ends -->
-    <!-- ======= certification Section Section ======= -->
+ <!-- ======= certification Section Section ======= -->
     <section id="Certi">
 
         <div class="testimonials paralax-mf bg-image">
@@ -401,6 +401,17 @@
                         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
                             <div class="swiper-wrapper">
 
+                                <div class="swiper-slide">
+                                    <div class="testimonial-box">
+                                        <img src="assets/img/indonasia.jpg" alt=" " class="img-fluid">
+                                        <div class="author-test">
+
+                                        </div>
+                                        <div class="content-test">
+
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-box">
                                         <img src="assets/cet/6.png" alt=" " class="img-fluid">
@@ -426,7 +437,17 @@
                                     </div>
                                 </div>
 
+                                <div class="swiper-slide">
+                                    <div class="testimonial-box">
+                                        <img src="assets/img/magaritaa.jpg" alt=" " class="img-fluid">
+                                        <div class="author-test">
 
+                                        </div>
+                                        <div class="content-test">
+
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-box">
                                         <img src="assets/cet/2.png" alt=" " class="img-fluid">
@@ -503,7 +524,17 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="swiper-slide">
+                                    <div class="testimonial-box">
+                                        <img src="assets/img/techyuva.jpg" alt=" " class="img-fluid">
+                                        <div class="author-test">
 
+                                        </div>
+                                        <div class="content-test">
+
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- <div class="swiper-slide ">
                                         <div class="testimonial-box ">
                                             <img src="assets/cet/ " alt=" " class="img-fluid ">
