--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
                                     <div class="row">
                                         <div class="col-lg-0">
                                             <ul>
+                                                  <li><i class="bi bi-chevron"></i> Represented India At The 18" International Student Conference on Advanced Science and
+ Technology Faculty of Engineering, Universitas Hasanuddin, Makassar, Indonesia.
+                                                </li>
                                                 <li><i class="bi bi-chevron"></i> Pursued Traing at Toyoto Motors.
                                                 </li>
                                                 <li><i class="bi bi-chevron"></i> Attended 17th International Student conference on Advanced Science and technology(ICAST) as Student Reseracher
@@ -378,7 +381,6 @@
                                                 </li>
                                             </ul>
                                         </div>
-
 
                                     </div>
                                 </div>
